--- a/index.html
+++ b/index.html
@@ -316,6 +316,53 @@
       </div>
 
     </main>
-    <footer></footer>
+    <!--galeri-->
+    <footer>
+
+      <div class="galeri">
+
+        <div class="conteiner">
+
+          <h2 class="galeri-title">Галерея <span>Блюд</span></h2>
+
+          <div class="galeri-images">
+
+            <img class="galeri-image" src="img/glasses.png" alt="">
+
+            <img class="galeri-image" src="img/img-coffe.png" alt="">
+
+            <img class="galeri-image" src="img/борщ.png" alt="">
+
+            <img class="galeri-image" src="img/img-coffe.png" alt="">
+
+            <img class="galeri-image" src="img/борщ.png" alt="">
+
+            <img class="galeri-image" src="img/glasses.png" alt="">
+
+          </div>
+
+          <h2 class="povars">Наши <span>Повара</span></h2>
+
+          <div class="povars-images">
+
+            <img class="povar-image" src="img/women-povar.png" alt="">
+
+            <img class="povar-image" src="img/povar-pizza.png" alt="">
+
+            <img class="povar-image" src="img/povar.png" alt="">
+
+          </div>
+
+        </div>
+
+        <img class="image-end" src="img/end-image.png" alt="">
+
+      </div>
+
+      <div class="footer">
+        Ceryright 2022
+      </div>
+
+    </footer>
   </body>
 </html>
